@@ -246,8 +246,6 @@ from matplotlib.numerix.mlab import rand,randn,eye,tri,diag,fliplr,flipud,rot90,
 
 from matplotlib.mlab import linspace, window_hanning, window_none, conv, detrend, detrend_mean, detrend_none, detrend_linear, corrcoef, polyfit, polyval, vander, entropy, normpdf, levypdf, find, trapz, prepca, fix, rem, norm, orth, rank, sqrtm, prctile, center_matrix, meshgrid, rk4, exp_safe, amap, sum_flat, mean_flat, rms_flat, l1norm, l2norm, norm, frange, diagonal_matrix, base_repr, binary_repr, log2, ispower2, bivariate_normal
 
-    
-    
 
 """
 problem syms
@@ -1589,8 +1587,6 @@ def yticks(*args, **kwargs):
              silent_list('Text yticklabel', labels)
              )
 
-
-
 def polar(*args, **kwargs):
     """
     POLAR(theta, r)
@@ -1601,10 +1597,9 @@ def polar(*args, **kwargs):
     ax = gca(polar=True)
     return ax.plot(*args, **kwargs)
 
-
 def over(func, *args, **kwargs):
     """
-Call func(*args, **kwargs) with hold(True) and then restore the hold state
+    Call func(*args, **kwargs) with hold(True) and then restore the hold state
     """
     h = ishold()
     hold(True)
@@ -1619,7 +1614,6 @@ def ion():
     'turn interactive mode on'
     matplotlib.interactive(True)
 
-
 def switch_backend(newbackend):
     close('all')
     global new_figure_manager, error_msg,  draw_if_interactive, show
@@ -1628,25 +1622,32 @@ def switch_backend(newbackend):
     from backends import new_figure_manager, error_msg, \
          draw_if_interactive, show
 
-
 def matshow(*args,**kw):
-    """Display an array as a matrix.
+    """Display an array as a matrix in a new figure window.
 
     The origin is set at the upper left hand corner and rows (first dimension
     of the array) are displayed horizontally.  The aspect ratio of the figure
     window is that of the array, as long as it is possible to fit it within
-    the constraints of your figure.figsize_min/max parameters with no
-    stretching.  If the window dimensions can't accomodate this (extremely
-    tall/wide arrays), some stretching will inevitably occur.
-
-    matshow() calls imshow() with args and **kwargs, but by default
-    it sets interpolation='nearest' (unless you override it).  All
-    other arguments and keywords are passed to imshow(), so see its
-    docstring for further details.
+    your screen with no stretching.  If the window dimensions can't accomodate
+    this (extremely tall/wide arrays), some stretching will inevitably occur.
 
     Tick labels for the xaxis are placed on top by default.
-    
-    return value is a (fig, ax, im) tuple
+
+    matshow() calls imshow() with args and **kwargs, but by default it sets
+    interpolation='nearest' (unless you override it).  All other arguments and
+    keywords are passed to imshow(), so see its docstring for further details.
+
+    Special keyword arguments which are NOT passed to imshow():
+
+      - fignum(None): by default, matshow() creates a new figure window with
+      automatic numbering.  If fignum is given as an integer, the created
+      figure will use this figure number.  Because of how matshow() tries to
+      set the figure aspect ratio to be the one of the array, if you provide
+      the number of an already existing figure, strange things may happen.
+
+      - returnall(False): by default, the return value is a figure instance.
+      With 'returnall=True', a (figure, axes, image) tuple is returned.
+
 
     Example usage:
     
@@ -1658,32 +1659,34 @@ def matshow(*args,**kw):
 
     dimlist = [(12,12),(128,64),(64,512),(2048,256)]
 
-    
     for d in dimlist:
         fig, ax, im = matshow(samplemat(d))
     show()
-    
     """
 
+    # Preprocess args for our purposes
     arr = args[0]
+    # Extract unique keywords we can't pass to imshow
+    fignum = popd(kw,'fignum',None)
+    retall = popd(kw,'returnall',False)
+
+    # Extract actual aspect ratio of array and make appropriately sized figure
     w,h = figaspect(arr)
-    fig = figure(figsize=(w,h))
-    ax = fig.add_axes([0.15, 0.09, 0.775, 0.775])
+    fig = figure(fignum,figsize=(w,h))
+    ax  = fig.add_axes([0.15, 0.09, 0.775, 0.775])
 
     ax.xaxis.tick_top()
     ax.title.set_y(1.05) # raise it up a bit for tick top
-    # Call with 'lower' origin (we'll flip axes later)
-    kw['origin'] = 'lower'
 
-    # We also set a 'free' aspect ratio b/c we've already done our best to fix
+    # imshow call: use 'lower' origin (we'll flip axes later)
+    kw['origin'] = 'lower'
+    # Also set a 'free' aspect ratio b/c we've already done our best to fix
     # it, while preserving the dimension sanity checks.  At this point, if a
     # bit of rescaling is needed, so be it.  Otherwise, we'd get the nasty
     # white bands we're working so hard to prevent.
     kw['aspect'] = 'free'
-
     # Unless overridden, don't interpolate
     kw.setdefault('interpolation','nearest')
-
     # All other keywords go through to imshow.
     im = ax.imshow(*args,**kw)
     
@@ -1691,8 +1694,12 @@ def matshow(*args,**kw):
     nr,nc = arr.shape[:2]
     ax.set_xlim((0,nc))
     ax.set_ylim((nr,0))
-    return fig, ax, im
-
+    
+    draw_if_interactive()
+    if retall:
+        return fig, ax, im
+    else:
+        return fig
     
 ### The following functions were autogenerated by the boilerplate.py
 ### script.  They are simple wrappers around the Axes methods of the
